# Homework_7

./: alembic.ini  models.py  pyproject.toml
alembic/versions/: 4e68dee3d111_added_unique.py  8e906de81735_init.py
src/: config.py  connect_db.py  models.py  my_select.py  seed.py
