[tool.poetry]
name = "homework-7"
version = "0.1.0"
description = ""
authors = ["Nyambevos <ruslan.bilokoniuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.1"
sqlalchemy = "^2.0.28"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
